--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@ body {
     background-color: #f0f0f0;
     font-family: 'Arial', sans-serif;
 }
-
+h1{
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
 .header {
     text-align: center;
     padding: 20px;
@@ -20,11 +24,17 @@ body {
     margin-bottom: 20px;
     border-radius: 10px;
     text-align: center;
-    font-size: 24px;
+    font-size: 34px;
     font-weight: bold;
+    font-family: "Just Me Again Down Here", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .btn-primary {
+    font-family: "Macondo Swash Caps", cursive;
+    font-weight: 400;
+    font-style: normal;
     background-color: #333;
     border-color: #333;
 }
